fixed text overlapping on projects in index

--- a/style-index.css
+++ b/style-index.css
@@ -64,7 +64,6 @@ img {
 
 .box {
     max-width: 20.833vw;
-    max-height: 74.074vh;
     align-items: center;
     justify-content: center;
     text-align: center;
